# uclang

./: .lgtm.yml  .travis.yml  CMakeLists.txt  README.md
cpp_src/: CMakeLists.txt
uclang/: CMakeLists.txt
uclang/demos/imx_sdma/: assembler.ucl  disassembler.ucl  firmware.ucl  main.ucl
uclang/demos/losovacka/: losovacka.ucl
uclang/demos/mm_displ/: mm_anim_base.ucl  mm_anim_node_base.ucl  mm_anim_node_page.ucl  mm_anim_page.ucl  mm_browser.ucl  mm_color.ucl  mm_element_base.ucl  mm_element_color.ucl  mm_element_image.ucl  mm_element_text.ucl  mm_element_video.ucl  mm_folder_action_animation.ucl  mm_folder_action_base.ucl  mm_folder_action_swap_page.ucl  mm_folder_event_base.ucl  mm_folder_event_immediate.ucl  mm_folder_event_timeout.ucl  mm_folder_node_base.ucl  mm_folder_trans.ucl  mm_gl_ctx_android.ucl  mm_gl_ctx_base.ucl  mm_gl_ctx_glut.ucl  mm_handler_base.ucl  mm_layout_base.ucl  mm_layout_columns.ucl  mm_layout_float.ucl  mm_layout_rows.ucl  mm_layout_vec.ucl  mm_main.ucl  mm_page.ucl  mm_page_folder.ucl  mm_rect.ucl  mm_shader_string.ucl  mm_shared.ucl  mm_timer_delegate.ucl
uclang/doc/: intro.md
uclang/doc/01_syntax/: 01_hello_world.md  02_comments.md  06_flow_branching.md  07_flow_loops.md  10_lambda_functions.md
uclang/examples/: prepare.sh  tutorial.ucl
uclang/examples/01_syntax/: 01_hello_world.ucl  02_comments.ucl  03_classes.ucl  04_members.ucl  05_methods.ucl  06_flow_branching.ucl  07_flow_loops.ucl  08_keywords.ucl  09_constants.ucl  10_lambda_functions.ucl  10_slice_operator.ucl  11_slice_operator.ucl  11_spec_methods.ucl  12_spec_methods.ucl
uclang/examples/02_modules/: 01_modules.ucl  imported.ucl
uclang/examples/test/: test.ucl
uclang/libs/ftgl_ucll/: CMakeLists.txt  README.TXT
uclang/libs/libbase_ucll/: CMakeLists.txt
uclang/libs/libftgl_ucll/: CMakeLists.txt
uclang/libs/node_ucll/: CMakeLists.txt
uclang/mods/adaptrain_uclm/: CMakeLists.txt
uclang/mods/amanithvg_uclm/: CMakeLists.txt
uclang/mods/ao_uclm/: CMakeLists.txt
uclang/mods/av_uclm/: CMakeLists.txt
uclang/mods/avahi_uclm/: CMakeLists.txt
uclang/mods/btrfsutil_uclm/: CMakeLists.txt
uclang/mods/channel_uclm/: CMakeLists.txt
uclang/mods/cl_uclm/: CMakeLists.txt
uclang/mods/crypto_uclm/: CMakeLists.txt
uclang/mods/curl_uclm/: CMakeLists.txt
uclang/mods/curses_uclm/: CMakeLists.txt
uclang/mods/datrie_uclm/: CMakeLists.txt
uclang/mods/ddb_uclm/: CMakeLists.txt
uclang/mods/dlms_uclm/: CMakeLists.txt
uclang/mods/emscripten_uclm/: CMakeLists.txt
uclang/mods/epoll_uclm/: CMakeLists.txt
uclang/mods/fann_uclm/: CMakeLists.txt
uclang/mods/fftw_uclm/: CMakeLists.txt
uclang/mods/fgettools_uclm/: CMakeLists.txt
uclang/mods/freetype2_uclm/: CMakeLists.txt
uclang/mods/ftgl_uclm/: CMakeLists.txt
uclang/mods/ftp_uclm/: CMakeLists.txt
uclang/mods/fuse_uclm/: CMakeLists.txt
uclang/mods/ga_uclm/: CMakeLists.txt
uclang/mods/gcrypt_uclm/: CMakeLists.txt
uclang/mods/gif_uclm/: CMakeLists.txt
uclang/mods/gl_uclm/: CMakeLists.txt
uclang/mods/glew_uclm/: CMakeLists.txt
uclang/mods/glut_uclm/: CMakeLists.txt
uclang/mods/gmp_uclm/: CMakeLists.txt
uclang/mods/gsl_uclm/: CMakeLists.txt
uclang/mods/gstreamer_uclm/: CMakeLists.txt
uclang/mods/gtk_uclm/: CMakeLists.txt
uclang/mods/http_uclm/: CMakeLists.txt
uclang/mods/iconv_uclm/: CMakeLists.txt
uclang/mods/image_uclm/: CMakeLists.txt
uclang/mods/imxegl_uclm/: CMakeLists.txt
uclang/mods/inotify_uclm/: CMakeLists.txt
uclang/mods/intelhex_uclm/: CMakeLists.txt
uclang/mods/isal_uclm/: CMakeLists.txt
uclang/mods/jit_uclm/: CMakeLists.txt
uclang/mods/ledmat_uclm/: CMakeLists.txt
uclang/mods/lightning_uclm/: CMakeLists.txt
uclang/mods/linux_uclm/: CMakeLists.txt
uclang/mods/locale_uclm/: CMakeLists.txt
uclang/mods/logger_uclm/: CMakeLists.txt
uclang/mods/lua_uclm/: CMakeLists.txt
uclang/mods/math_uclm/: CMakeLists.txt
uclang/mods/mono_uclm/: CMakeLists.txt
uclang/mods/mpg_uclm/: CMakeLists.txt
uclang/mods/mqtt_uclm/: CMakeLists.txt
uclang/mods/nanomsg_uclm/: CMakeLists.txt
uclang/mods/node_uclm/: CMakeLists.txt
uclang/mods/opencv_uclm/: CMakeLists.txt
uclang/mods/openssl_uclm/: CMakeLists.txt
uclang/mods/pam_uclm/: CMakeLists.txt
uclang/mods/pcre_uclm/: CMakeLists.txt
uclang/mods/perl_uclm/: CMakeLists.txt
uclang/mods/pigpio_uclm/: CMakeLists.txt
uclang/mods/portaudio_uclm/: CMakeLists.txt
uclang/mods/prolog_uclm/: CMakeLists.txt
uclang/mods/protobuf_uclm/: CMakeLists.txt
uclang/mods/psql_uclm/: CMakeLists.txt
uclang/mods/python_uclm/: CMakeLists.txt
uclang/mods/qrencode_uclm/: CMakeLists.txt
uclang/mods/quirc_uclm/: CMakeLists.txt
uclang/mods/raw_uclm/: CMakeLists.txt
uclang/mods/readline_uclm/: CMakeLists.txt
uclang/mods/regex_uclm/: CMakeLists.txt
uclang/mods/ruby_uclm/: CMakeLists.txt
uclang/mods/rust_uclm/: CMakeLists.txt
uclang/mods/shape_uclm/: CMakeLists.txt
uclang/mods/shivavg_uclm/: CMakeLists.txt
uclang/mods/snappy_uclm/: CMakeLists.txt
uclang/mods/snmp_uclm/: CMakeLists.txt
uclang/mods/sqlite_uclm/: CMakeLists.txt
uclang/mods/ssh2_uclm/: CMakeLists.txt
uclang/mods/sys_uclm/: CMakeLists.txt
uclang/mods/time_uclm/: CMakeLists.txt
uclang/mods/utf8proc_uclm/: CMakeLists.txt
uclang/mods/uv_uclm/: CMakeLists.txt
uclang/mods/v8_uclm/: CMakeLists.txt
uclang/mods/va_uclm/: CMakeLists.txt
uclang/mods/validator_uclm/: CMakeLists.txt
uclang/mods/vg_uclm/: CMakeLists.txt
uclang/mods/vlc_uclm/: CMakeLists.txt
uclang/mods/websocket_uclm/: CMakeLists.txt
uclang/mods/xlsxwriter_uclm/: CMakeLists.txt
uclang/mods/xml_uclm/: CMakeLists.txt
uclang/mods/xxhash_uclm/: CMakeLists.txt
uclang/mods/zip_uclm/: CMakeLists.txt
uclang/mods/zlib_uclm/: CMakeLists.txt
uclang/parsers/cont_parser/: cont.rules
uclang/parsers/docu_parser/: docu_comment.rules  docu_extract.rules
uclang/parsers/jit_parser/: jit_parser.rules
uclang/parsers/jit_types/: jit_types.rules
uclang/parsers/json_parser/: JSON.rules  json.rules
uclang/parsers/pack_code/: code_format.rules  pack_code.rules
uclang_build/: build.bat  (+7 more)
(+957 files in other folders)
