
if(PKG_CONFIG_FOUND)
  pkg_search_module(LIBAVUTIL "libavutil >= 54.3.0 < 59.0.0")
  pkg_search_module(LIBAVFORMAT "libavformat >= 56.1.0 < 59.0.0")
  pkg_search_module(LIBAVCODEC "libavcodec >= 56.1.0 < 59.0.0")
  pkg_search_module(LIBSWSCALE "libswscale >= 3.0.0")
endif()

if(NOT LIBAVUTIL_FOUND)
  find_package(FFMPEG CONFIG QUIET COMPONENTS avutil)
  if(FFMPEG_FOUND OR TARGET FFMPEG::avutil)
    set(LIBAVUTIL_FOUND TRUE)
    if(TARGET FFMPEG::avutil)
      get_target_property(LIBAVUTIL_INCLUDE_DIRS FFMPEG::avutil
          INTERFACE_INCLUDE_DIRECTORIES)
      set(LIBAVUTIL_LIBRARIES FFMPEG::avutil)
    endif()
  endif()
endif()

if(NOT LIBAVUTIL_FOUND)
  find_path(LIBAVUTIL_INCLUDE_DIR libavutil/avutil.h)
  find_library(LIBAVUTIL_LIBRARY NAMES avutil)
  if(LIBAVUTIL_INCLUDE_DIR AND LIBAVUTIL_LIBRARY)
    set(LIBAVUTIL_FOUND TRUE)
    set(LIBAVUTIL_INCLUDE_DIRS ${LIBAVUTIL_INCLUDE_DIR})
    set(LIBAVUTIL_LIBRARIES ${LIBAVUTIL_LIBRARY})
  endif()
endif()

if(NOT LIBAVFORMAT_FOUND)
  find_package(FFMPEG CONFIG QUIET COMPONENTS avformat)
  if(FFMPEG_FOUND OR TARGET FFMPEG::avformat)
    set(LIBAVFORMAT_FOUND TRUE)
    if(TARGET FFMPEG::avformat)
      get_target_property(LIBAVFORMAT_INCLUDE_DIRS FFMPEG::avformat
          INTERFACE_INCLUDE_DIRECTORIES)
      set(LIBAVFORMAT_LIBRARIES FFMPEG::avformat)
    endif()
  endif()
endif()

if(NOT LIBAVFORMAT_FOUND)
  find_path(LIBAVFORMAT_INCLUDE_DIR libavformat/avformat.h)
  find_library(LIBAVFORMAT_LIBRARY NAMES avformat)
  if(LIBAVFORMAT_INCLUDE_DIR AND LIBAVFORMAT_LIBRARY)
    set(LIBAVFORMAT_FOUND TRUE)
    set(LIBAVFORMAT_INCLUDE_DIRS ${LIBAVFORMAT_INCLUDE_DIR})
    set(LIBAVFORMAT_LIBRARIES ${LIBAVFORMAT_LIBRARY})
  endif()
endif()

if(NOT LIBAVCODEC_FOUND)
  find_package(FFMPEG CONFIG QUIET COMPONENTS avcodec)
  if(FFMPEG_FOUND OR TARGET FFMPEG::avcodec)
    set(LIBAVCODEC_FOUND TRUE)
    if(TARGET FFMPEG::avcodec)
      get_target_property(LIBAVCODEC_INCLUDE_DIRS FFMPEG::avcodec
          INTERFACE_INCLUDE_DIRECTORIES)
      set(LIBAVCODEC_LIBRARIES FFMPEG::avcodec)
    endif()
  endif()
endif()

if(NOT LIBAVCODEC_FOUND)
  find_path(LIBAVCODEC_INCLUDE_DIR libavcodec/avcodec.h)
  find_library(LIBAVCODEC_LIBRARY NAMES avcodec)
  if(LIBAVCODEC_INCLUDE_DIR AND LIBAVCODEC_LIBRARY)
    set(LIBAVCODEC_FOUND TRUE)
    set(LIBAVCODEC_INCLUDE_DIRS ${LIBAVCODEC_INCLUDE_DIR})
    set(LIBAVCODEC_LIBRARIES ${LIBAVCODEC_LIBRARY})
  endif()
endif()

if(NOT LIBSWSCALE_FOUND)
  find_package(FFMPEG CONFIG QUIET COMPONENTS swscale)
  if(FFMPEG_FOUND OR TARGET FFMPEG::swscale)
    set(LIBSWSCALE_FOUND TRUE)
    if(TARGET FFMPEG::swscale)
      get_target_property(LIBSWSCALE_INCLUDE_DIRS FFMPEG::swscale
          INTERFACE_INCLUDE_DIRECTORIES)
      set(LIBSWSCALE_LIBRARIES FFMPEG::swscale)
    endif()
  endif()
endif()

if(NOT LIBSWSCALE_FOUND)
  find_path(LIBSWSCALE_INCLUDE_DIR libswscale/swscale.h)
  find_library(LIBSWSCALE_LIBRARY NAMES swscale)
  if(LIBSWSCALE_INCLUDE_DIR AND LIBSWSCALE_LIBRARY)
    set(LIBSWSCALE_FOUND TRUE)
    set(LIBSWSCALE_INCLUDE_DIRS ${LIBSWSCALE_INCLUDE_DIR})
    set(LIBSWSCALE_LIBRARIES ${LIBSWSCALE_LIBRARY})
  endif()
endif()

if(LIBAVUTIL_FOUND AND LIBAVFORMAT_FOUND AND LIBAVCODEC_FOUND AND LIBSWSCALE_FOUND)
  set(CONF_DO_BUILD TRUE)
  set(CONF_HEADER_DIRS
    "${LIB_BASE}/header_files")
  set(CONF_INCLUDE_DIRS
    ${LIBAVUTIL_INCLUDE_DIRS}
    ${LIBAVFORMAT_INCLUDE_DIRS}
    ${LIBAVCODEC_INCLUDE_DIRS}
    ${LIBSWSCALE_INCLUDE_DIRS})
  set(CONF_COMP_DEFS
    "-D__STDC_CONSTANT_MACROS -Wno-deprecated-declarations")
  set(CONF_LINK_LIBS
    base_ucll
    ${LIBAVUTIL_LIBRARIES}
    ${LIBAVFORMAT_LIBRARIES}
    ${LIBAVCODEC_LIBRARIES}
    ${LIBSWSCALE_LIBRARIES})
endif()

